sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:6: error: not found: value len
    for(i<-1 to len){
                ^